<resources>
    <string name="app_name">Notes</string>
    <string name="add">Add</string>
    <string name="read">Read</string>
    <string name="view">View</string>
    <string name="settings">Settings</string>
    <string name="add_topic">Add Topic</string>
    <string name="create_new_note">Create new note</string>
    <string name="description">Description</string>
    <string name="semester_number">Semester Number</string>
    <string name="save">Save</string>
    <string name="change_date">Change Date</string>
    <string name="date">Date: </string>
    <string name="future_tasks">Future Tasks</string>
    <string name="create">Create</string>
    <string name="update_note">Update note</string>
    <string name="update">Update</string>
    <string name="search_topics">Search topics</string>
    <string name="notes">Notes</string>
    <string name="image">Image</string>
    <string name="semester">Semester:</string>
    <string name="boston">Boston</string>
    <string name="light">Light</string>
    <string name="change_theme">Change Theme</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="please_note_that_deleting_an_item_is_permanent">Please note that deleting an item is permanent</string>
    <string name="click_item_to_update">Click item to update</string>
    <string name="my_notes">My Notes</string>

    <string-array name="semester_options">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_recod">UPDATE RECORD</string>
    <string name="update_record">UPDATE RECORD</string>
    <string name="submit">Submit</string>
</resources>