<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_theme"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:checkedButton="@id/light">

        <RadioButton
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark" />

        <RadioButton
            android:id="@+id/system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        android:text="@string/save"/>

</androidx.appcompat.widget.LinearLayoutCompat>