<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="6dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/notes"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:padding="8dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:padding="8dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/date"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:padding="8dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/semester"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:padding="8dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/future_tasks"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:padding="8dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>