<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_record"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"
        android:padding="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_search_background"
        android:inputType="textPersonName"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="8dp"
        app:drawableTint="?colorButtonNormal"
        android:padding="16dp"
        android:singleLine="true"
        android:hint="@string/search_topics" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:textStyle="bold"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:padding="6dp"
        android:text="@string/click_item_to_update"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="?android:textColorSecondaryNoDisable" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:background="?colorButtonNormal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.appcompat.widget.LinearLayoutCompat>