<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/create_new_note"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_topic"
            android:textColorHint="?android:textColorSecondaryNoDisable"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            android:textColorHint="?android:textColorSecondaryNoDisable"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/semester_number" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/semesterSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/semester_options"
                android:padding="16dp"
                android:spinnerMode="dialog" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/future_tasks"
            android:textColorHint="?android:textColorSecondaryNoDisable"
            app:boxBackgroundMode="none"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:drawableEnd="@drawable/ic_baseline_edit_24"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:gravity="end"
            android:padding="16dp"
            android:text="@string/date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="32dp"
            android:background="#FDD835"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:scrollbarStyle="outsideOverlay"
            android:text="@string/submit"
            app:backgroundTint="#FFB300"
            app:cornerRadius="7dp"
            app:icon="@drawable/ic_baseline_library_books_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>