<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/design_default_color_primary_variant"
            app:menu="@menu/menu"
            app:title="EDairy"
            android:backgroundTint="@android:color/holo_orange_light"
            app:logo="@color/design_default_color_primary_variant"
            app:subtitleTextColor="@color/purple_200"
            app:subtitleTextAppearance="@color/cardview_shadow_end_color"
            app:subtitle="APPS by TL.iO"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Body1">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_post_add_24"
                android:text="@string/add" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_sticky_note_2_24"
                android:text="@string/update" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_library_books_24"
                android:text="@string/read" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_library_books_24"
                android:text="@string/my_notes" />


        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.appcompat.widget.LinearLayoutCompat>